--- a/New_FMRedioPlayer/app/build.gradle
+++ b/New_FMRedioPlayer/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation files('libs\\XmlyOAuth2SDK_V1.10.jar')
     implementation files('libs\\okio-1.8.0.jar')
     implementation files('libs\\okhttp-3.3.1.jar')
+    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
 }
