--- a/New_FMRedioPlayer/app/build.gradle
+++ b/New_FMRedioPlayer/app/build.gradle
@@ -26,8 +26,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta1'
+    testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs\\gson-2.8.0.jar')
@@ -36,4 +36,5 @@ dependencies {
     implementation files('libs\\okio-1.8.0.jar')
     implementation files('libs\\okhttp-3.3.1.jar')
     implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
