--- a/New_FMRedioPlayer/app/build.gradle
+++ b/New_FMRedioPlayer/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation files('libs\\okhttp-3.3.1.jar')
     implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.3.2'
+
 }
