--- a/New_FMRedioPlayer/app/build.gradle
+++ b/New_FMRedioPlayer/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.3.2'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 
 }
