--- a/New_FMRedioPlayer/app/src/main/AndroidManifest.xml
+++ b/New_FMRedioPlayer/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailActivity">
-
         </activity>
-
+        <activity android:name=".PlayerActivity">
+        </activity>
     </application>
 
 </manifest>
