--- a/New_FMRedioPlayer/app/src/main/AndroidManifest.xml
+++ b/New_FMRedioPlayer/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+
     <application
         android:name=".base.baseApplication"
         android:allowBackup="true"
@@ -26,6 +29,9 @@
         </activity>
         <activity android:name=".PlayerActivity">
         </activity>
+
+        <service android:name="com.ximalaya.ting.android.opensdk.player.service.XmPlayerService"
+        android:process=":player"/>
     </application>
 
 </manifest>
