--- a/New_FMRedioPlayer/app/src/main/AndroidManifest.xml
+++ b/New_FMRedioPlayer/app/src/main/AndroidManifest.xml
@@ -18,16 +18,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity">
+        <activity android:name=".DetailActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".PlayerActivity">
+        <activity android:name=".PlayerActivity"
+            android:screenOrientation="portrait">
         </activity>
 
         <service android:name="com.ximalaya.ting.android.opensdk.player.service.XmPlayerService"
