--- a/New_FMRedioPlayer/app/src/main/AndroidManifest.xml
+++ b/New_FMRedioPlayer/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         <activity android:name=".PlayerActivity"
             android:screenOrientation="portrait">
         </activity>
-
+        <activity android:name=".SearchActivity"
+            android:screenOrientation="portrait">
+        </activity>
         <service android:name="com.ximalaya.ting.android.opensdk.player.service.XmPlayerService"
         android:process=":player"/>
     </application>
