--- a/New_FMRedioPlayer/app/build.gradle
+++ b/New_FMRedioPlayer/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.3.2'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
 }
