设置新建账号界面

--- a/MyApplicationSQL/app/src/main/AndroidManifest.xml
+++ b/MyApplicationSQL/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <provider
+            android:exported = "true"
             android:name="provider.UserProvider"
             android:authorities="com.example.myapplicationsql" />
     </application>
